--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ body {
   font-family: 'Roboto';
   width: 100%;
   height: 100vh;
+  background: #E5E5E5;
 }
 
-
+.app {
+  display: flex;
+  position: relative;
+}
